--- a/index.html
+++ b/index.html
@@ -37,12 +37,12 @@
                 <ul>
                     <li><a href="#features">FEATURES</a></li>
                     <li><a href="#lineup">LINE UP</a></li>
-                    <li><a href="https://item.rakuten.co.jp/elcommun/elco-pnb001-/">ONLINE SHOP</a></li>
+                    <li><a href="https://item.rakuten.co.jp/elcommun/elco-pnb001-/" target="_blank">ONLINE SHOP</a></li>
                 </ul>
             </nav>
         </header>
     </div>
-    <a href="https://item.rakuten.co.jp/elcommun/elco-pnb001-/" id="onlineshop">
+    <a href="https://item.rakuten.co.jp/elcommun/elco-pnb001-/" id="onlineshop" target="_blank">
         <div>
             <img src="/images/ribbon.svg" alt="">
             <p>ONLINE SHOP
@@ -146,7 +146,7 @@
                     <p>うさぎ</p>
                 </li>
             </ul>
-            <a href="https://item.rakuten.co.jp/elcommun/elco-pnb001-/">
+            <a href="https://item.rakuten.co.jp/elcommun/elco-pnb001-/" target="_blank">
                 <img src="/images/ribbon_2.svg" alt="">
                 <p>ONLINE SHOP<img src="/images/next.svg" alt=""></p>
             </a>
@@ -167,22 +167,21 @@
             </div>
             <aside>
                 <ul>
-                    <li><a href="#">会社概要</a></li>
-                    <li><a href="#">お問合せ</a></li>
-                    <li><a href="#">法人様はこちら</a></li>
-                    <li><a href="#">プライバシーポリシー</a></li>
+                    <li><a href="https://elcommun.co.jp/company-info/" target="_blank">会社概要</a></li>
+                    <li><a href="https://elcommun.co.jp/contact-us/" target="_blank">お問合せ</a></li>
+                    <li><a href="https://elcommun.co.jp/for-business/" target="_blank">法人様はこちら</a></li>
+                    <li><a href="https://elcommun.co.jp/privacy-policy/" target="_blank">プライバシーポリシー</a></li>
                 </ul>
             </aside>
         </div>
         <ul>
-            <li><a href="#"><i class="fa-brands fa-instagram"></i></a></li>
-            <li><a href="#"><i class="fa-brands fa-x-twitter"></i></a></li>
-            <li><a href="#"><i class="fa-brands fa-facebook"></i></a></li>
+            <li><a href="https://www.instagram.com/matoka_jp/" target="_blank"><i class="fa-brands fa-instagram"></i></a></li>
+            <li><a href="https://twitter.com/matoka_jp" target="_blank"><i class="fa-brands fa-x-twitter"></i></a></li>
+            <li><a href="https://www.facebook.com/matokajp" target="_blank"><i class="fa-brands fa-facebook"></i></a></li>
         </ul>
         <h6>@ EL COMMUN., Inc. All Rights Reserved.</h6>
     </footer>
     <!-- footer end -->
     <script src="/assets/js/main.js"></script>
 </body>
-
 </html>
